<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/update"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/about_app"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:title="@string/exit"
        app:showAsAction="never"/>
</menu>